[project]
name = "apispec-webframeworks"
version = "1.2.0"
description = "Web framework plugins for apispec."
readme = "README.rst"
license = { file = "LICENSE" }
maintainers = [{ name = "Steven Loria", email = "sloria1@gmail.com" }]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = ["apispec[yaml]>=6.0.0"]

[project.urls]
Funding = "https://opencollective.com/marshmallow"
Issues = "https://github.com/marshmallow-code/apispec-webframeworks/issues"
Source = "https://github.com/marshmallow-code/apispec-webframeworks"

[project.optional-dependencies]
tests = [
  "pytest",
  "Flask>=2.3.3",
  "tornado>=6",
  "bottle>=0.12.25",
  "aiohttp>=3.9.3",
]
dev = ["apispec-webframeworks[tests]", "tox", "pre-commit~=3.5"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["tests/", "CHANGELOG.rst", "tox.ini"]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle error
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warning
]

[[tool.mypy.overrides]]
module = ["bottle.*"]
ignore_missing_imports = true
